# catchery

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt  setup.py
.gemini/: GEMINI.md  settings.json
examples/: example_basic_error_handling.py  example_context_manager.py  example_error_capturing.py  example_error_handling.py  example_exception_chaining.py  example_file_logging.py  example_inheritance_exceptions.py  example_json_logging.py  example_safe_execution.py  example_setup_logging.py  example_validation.py
src/catchery/: __init__.py  error_handler.py  validation.py
tests/: test_json_serialization_error.py  test_pyerha_errorhandler.py  test_validation.py
